kubernetes/220419 django eks 3tier ingress/nginx deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: gymin97/django:nginx_v1
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/etc/nginx/"
          name: nginx-conf
          readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
