kubernetes/220419 django eks 3tier ingress/was init deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
spec:
  replicas: 3
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: was
        image: gymin97/django:django_v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
