kubernetes/220419 django eks 3tier ingress/was svc.yml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
spec:
  selector:
    app: was
  ports:
  - port: 8000
    targetPort: 8000
